<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation, TypographyDashes, TypographyEllipsis">
    <string name="exit">Exit</string>
    <string name="functionDefaultSettings">Function Defaults</string>
    <string name="functionConsistSettings">Consist Function Settings</string>
    <string name="dccExFunctionSettings">DCC-EX Function Settings</string>
    <string name="functionLatchingSettings">Function Latching Settings</string>
    <string name="fb_column_label">Label</string>
    <string name="fb_column_function">Func#</string>
    <string name="introMenu">Intro/Setup Wizard</string>
    <string name="functionConsistColumnLabel">Label</string>
    <string name="functionConsistColumnLocos">Loco(s)</string>
    <string name="functionConsistColumnLatching">Latching</string>
    <string name="prefFunctionConsistLatchingDefaultValue">none</string>
    <string name="prefFunctionConsistLatchingLightBellDefaultValue">latching</string>
    <string name="prefFunctionConsistLatchingLightBellDefaultValueEnglish" translatable="false">latching</string>
    <string name="prefFunctionConsistLocosDefaultValue">lead</string>
    <string name="functionConsistHelpText">Used for:\na) Non-roster locos, or\n\nb) the \'Special\' consist function following options.\n\nFor \'b\' Select how the text of each function will be searched for in the function labels for each loco in the consist.</string>
    <string name="functionConsistHeader">Function Actions</string>
    <string name="app_name" translatable="false">Engine Driver</string>
    <string name="app_description">Engine Driver - Throttle for your Android phone.  This application can connect to a JMRI, DCC-EX, MRC or DigiTrax WiThrottle server, or DCC-EX native server, and in turn control your locomotives. Speed, direction, and up to 32 DCC functions are supported for one to six locomotives.</string>
    <string name="app_name_intro">Introduction</string>
    <string name="app_name_connect">Connect to Server</string>
    <string name="app_name_throttle">Throttle</string>
    <string name="app_name_throttle_long">Engine Driver - Throttle</string>
    <string name="app_name_throttle_short">Throttle</string>
    <string name="app_name_power_control">Power Control</string>
    <string name="app_name_dcc_ex" translatable="false">DCC-EX</string>
    <string name="app_name_withrottle_cv_programmer">CV Prog on MAIN</string>
    <string name="app_name_reconnect_status">Reconnect Status</string>
    <string name="app_name_reconnect_status_long">Engine Driver - Reconnect Status</string>
    <string name="app_name_routes">Routes</string>
    <string name="app_name_routes_long">Engine Driver - Routes</string>
    <string name="app_name_routes_short">Routes</string>
    <string name="app_name_turnouts">Engine Driver - Turnouts</string>
    <string name="app_name_turnouts_short">Turnouts</string>
    <string name="app_name_about">❔About</string>
    <string name="app_name_web">Web</string>
    <string name="app_name_web_long">Engine Driver - Web</string>
    <string name="app_name_web_short">Web</string>
    <string name="app_name_functions">Default Function Settings</string>
    <string name="app_name_consist_functions">Consist Function Settings</string>
    <string name="app_name_preferences">Preferences</string>
    <string name="app_name_select_loco">Select/Release Loco</string>
    <string name="app_name_ConsistEdit">Consist Edit</string>
    <string name="app_name_ConsistLightsEdit">Consist Lights</string>
    <string name="app_name_gamepad_test">Gamepad\/USB Test</string>
    <string name="app_name_log_viewer">Log Viewer</string>
    <string name="app_name_device_sounds_settings">In Phone Loco Sounds</string>
    <string name="gamepad_test_menu">Gamepads\/USB</string>
    <string name="gamepad_test_reset">Gamepads\/USB Full Reset</string>
    <string name="gamepad1_test">Gamepad\/USB 1 Test</string>
    <string name="gamepad2_test">Gamepad\/USB 2 Test</string>
    <string name="gamepad3_test">Gamepad\/USB 3 Test</string>
    <string name="gamepad4_test">Gamepad\/USB 4 Test</string>
    <string name="gamepad5_test">Gamepad\/USB 5 Test</string>
    <string name="gamepad6_test">Gamepad\/USB 6 Test</string>
    <string name="toastWasInBackgroundTitle">Engine Driver is not designed to continue running while in background and may be killed by the system at any time.\nIf you really need to try to run it in background, make sure to enable the \'Android System Setting->Apps->Engine Driver->App Battery Usage->Allow Background Usage\'</string>
    <string name="notificationInBackgroundTitle">Engine Driver in Background</string>
    <string name="notificationInBackgroundText">☠️Android may kill it at any time without warning. Tap to reopen</string>
    <string name="notificationInBackgroundTextLowMemory">☠️Memory low. Engine Driver may be killed soon. Tap to reopen</string>
    <string name="notificationInBackgroundTextKilled">☠️Memory exhausted. Engine Driver has been killed</string>
    <string name="notificationAppWasKilledInBackground">Engine Driver forced to restart by Android</string>
    <string name="host_ip">Host Name or Address</string>
    <string name="port">Port</string>
    <string name="connect_button">Connect</string>
    <string name="recent_connections">Recent Servers</string>
    <string name="select_loco_heading">Acquire Loco, Method - Throttle %1$s</string>
    <string name="select_loco_current_locos_heading">Currently Selected Locos - Throttle %1$s</string>
    <string name="select_loco">Enter Locomotive Address to Acquire</string>
    <string name="select_loco_address">Address</string>
    <string name="acquire_button">Acquire</string>
    <string name="roster_list">Select from Roster / Consist Entries</string>
    <string name="rosterDetailsDialogTitle">Roster details for</string>
    <string name="recent_engines">Select from Recent Locos</string>
    <string name="recent_consists">Select from Recent Consists</string>
    <string name="discovered_services">Discovered Servers - WiFi: %1$s</string>
    <string name="stop">Stop</string>
    <string name="forward">Forward</string>
    <string name="reverse">Reverse</string>
    <string name="neutral">Neutral</string>
    <string name="brake">Brake</string>
    <string name="air_reservoir">Air Reservoir</string>
    <string name="airReservoirShort">Air Res %d%%</string>
    <string name="airLineShort">Air Line %d%%</string>
    <string name="load">Load</string>
    <string name="none">None</string>
    <string name="fb_help_text">Enter labels and function#s, in the order you\'d like them displayed. Leave label blank to hide button. Used when roster functions are not available.</string>
    <string name="copy_function_labels">Copy Labels from Roster</string>
    <string name="fb_header">Edit Functions</string>
    <string name="fbResetFunctionLabels">Reset All</string>
    <string name="prefNumberOfDefaultFunctionLabelsTitle">Number of Default Functions</string>
    <string name="prefNumberOfDefaultFunctionLabelsSummary">Limit the Function Labels shown if not available from the Server roster</string>
    <string name="prefNumberOfDefaultFunctionLabelsDefaultValue" translatable="false">32</string>
    <string name="prefNumberOfDefaultFunctionLabelsForRosterTitle">Number of Default Functions for Roster</string>
    <string name="about">About</string>
    <string name="web">Web</string>
    <string name="turnouts">Turnouts</string>
    <string name="routes">Routes</string>
    <string name="power">Power</string>
    <string name="throttle">Throttle</string>
    <string name="preferences">Preferences</string>
    <string name="EsuMc2KnobAction">Enable/Disable Knob</string>
    <string name="deviceSoundsMenu">Loco Sounds</string>
    <string name="logViewer">View Log</string>
    <string name="EStop">Estop</string>
    <string name="PowerButtonBar">power_button</string>
    <string name="limitSpeedButtonLabel">Limit Speed</string>
    <string name="pauseSpeedButtonLabel">Pause</string>
    <string name="functionButton00DefaultValue">Light</string>
    <string name="functionButton01DefaultValue">Bell</string>
    <string name="functionButton02DefaultValue">Horn</string>
    <string name="functionButton03DefaultValue" translatable="false">03</string>
    <string name="functionButton04DefaultValue" translatable="false">04</string>
    <string name="functionButton05DefaultValue" translatable="false">05</string>
    <string name="functionButton06DefaultValue" translatable="false">06</string>
    <string name="functionButton07DefaultValue" translatable="false">07</string>
    <string name="functionButton08DefaultValue" translatable="false">08</string>
    <string name="functionButton09DefaultValue" translatable="false">09</string>
    <string name="functionButton10DefaultValue" translatable="false">10</string>
    <string name="functionButton11DefaultValue" translatable="false">11</string>
    <string name="functionButton12DefaultValue" translatable="false">12</string>
    <string name="functionButton13DefaultValue" translatable="false">13</string>
    <string name="functionButton14DefaultValue" translatable="false">14</string>
    <string name="functionButton15DefaultValue" translatable="false">15</string>
    <string name="functionButton16DefaultValue" translatable="false">16</string>
    <string name="functionButton17DefaultValue" translatable="false">17</string>
    <string name="functionButton18DefaultValue" translatable="false">18</string>
    <string name="functionButton19DefaultValue" translatable="false">19</string>
    <string name="functionButton20DefaultValue" translatable="false">20</string>
    <string name="functionButton21DefaultValue" translatable="false">21</string>
    <string name="functionButton22DefaultValue" translatable="false">22</string>
    <string name="functionButton23DefaultValue" translatable="false">23</string>
    <string name="functionButton24DefaultValue" translatable="false">24</string>
    <string name="functionButton25DefaultValue" translatable="false">25</string>
    <string name="functionButton26DefaultValue" translatable="false">26</string>
    <string name="functionButton27DefaultValue" translatable="false">27</string>
    <string name="functionButton28DefaultValue" translatable="false">28</string>
    <string name="functionButton29DefaultValue" translatable="false">29</string>
    <string name="functionButton30DefaultValue" translatable="false">30</string>
    <string name="functionButton31DefaultValue" translatable="false">31</string>
    <string name="throttleSwitchAction">Switch Throttle Screen Layouts</string>
    <string name="flashlightAction">Flashlight</string>
    <string name="webViewButtonBar">Throttle Web View Button</string>
    <string name="kidsTimer">Timer</string>
    <string name="edit_consist_menu">Edit Consist</string>
    <string name="edit_consist_throttle_1">Edit Consist Throttle 1</string>
    <string name="edit_consist_throttle_2">Edit Consist Throttle 2</string>
    <string name="edit_consist_throttle_3">Edit Consist Throttle 3</string>
    <string name="edit_consist_throttle_4">Edit Consist Throttle 4</string>
    <string name="edit_consist_throttle_5">Edit Consist Throttle 5</string>
    <string name="edit_consist_throttle_6">Edit Consist Throttle 6</string>
    <string name="edit_consist_lights_throttle_1">Edit Consist Lights Throttle 1</string>
    <string name="edit_consist_lights_throttle_2">Edit Consist Lights Throttle 2</string>
    <string name="edit_consist_lights_throttle_3">Edit Consist Lights Throttle 3</string>
    <string name="edit_consist_lights_throttle_4">Edit Consist Lights Throttle 4</string>
    <string name="edit_consist_lights_throttle_5">Edit Consist Lights Throttle 5</string>
    <string name="edit_consist_lights_throttle_6">Edit Consist Lights Throttle 6</string>
</resources>