<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/throttle_screen_wrapper"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_margin="0dp"
    android:padding="0dp">

    <ScrollView
        android:id="@+id/function_buttons_scroller_2"
        style="?attr/ed_fn_scrollview_style"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="0dp"
        android:padding="0dp">

        <TableLayout
            android:id="@+id/function_buttons_table_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:stretchColumns="0,1,2,3">

            <TableRow android:baselineAligned="false">

                <Button
                    style="?attr/ed_fn_button_style"
                    android:text="@string/functionButton00DefaultValue" />

                <Button
                    style="?attr/ed_fn_button_style"
                    android:text="@string/functionButton01DefaultValue" />

                <Button
                    style="?attr/ed_fn_button_style"
                    android:text="@string/functionButton02DefaultValue" />

                <Button
                    style="?attr/ed_fn_button_style"
                    android:text="@string/functionButton03DefaultValue" />
            </TableRow>

            <TableRow android:baselineAligned="false">

                <Button
                    style="?attr/ed_fn_button_style"
                    android:text="@string/functionButton04DefaultValue" />

                <Button
                    style="?attr/ed_fn_button_style"
                    android:text="@string/functionButton05DefaultValue" />

                <Button
                    style="?attr/ed_fn_button_style"
                    android:text="@string/functionButton06DefaultValue" />

                <Button
                    style="?attr/ed_fn_button_style"
                    android:text="@string/functionButton07DefaultValue" />
            </TableRow>

            <TableRow android:baselineAligned="false">

                <Button
                    style="?attr/ed_fn_button_style"
                    android:text="@string/functionButton08DefaultValue" />

                <Button
                    style="?attr/ed_fn_button_style"
                    android:text="@string/functionButton09DefaultValue" />

                <Button
                    style="?attr/ed_fn_button_style"
                    android:text="@string/functionButton10DefaultValue" />

                <Button
                    style="?attr/ed_fn_button_style"
                    android:text="@string/functionButton11DefaultValue" />
            </TableRow>

            <TableRow android:baselineAligned="false">

                <Button
                    style="?attr/ed_fn_button_style"
                    android:text="@string/functionButton12DefaultValue" />

                <Button
                    style="?attr/ed_fn_button_style"
                    android:text="@string/functionButton13DefaultValue" />

                <Button
                    style="?attr/ed_fn_button_style"
                    android:text="@string/functionButton14DefaultValue" />

                <Button
                    style="?attr/ed_fn_button_style"
                    android:text="@string/functionButton15DefaultValue" />
            </TableRow>

            <TableRow android:baselineAligned="false">

                <Button
                    style="?attr/ed_fn_button_style"
                    android:text="@string/functionButton16DefaultValue" />

                <Button
                    style="?attr/ed_fn_button_style"
                    android:text="@string/functionButton17DefaultValue" />

                <Button
                    style="?attr/ed_fn_button_style"
                    android:text="@string/functionButton18DefaultValue" />

                <Button
                    style="?attr/ed_fn_button_style"
                    android:text="@string/functionButton19DefaultValue" />
            </TableRow>

            <TableRow android:baselineAligned="false">

                <Button
                    style="?attr/ed_fn_button_style"
                    android:text="@string/functionButton20DefaultValue" />

                <Button
                    style="?attr/ed_fn_button_style"
                    android:text="@string/functionButton21DefaultValue" />

                <Button
                    style="?attr/ed_fn_button_style"
                    android:text="@string/functionButton22DefaultValue" />

                <Button
                    style="?attr/ed_fn_button_style"
                    android:text="@string/functionButton23DefaultValue" />
            </TableRow>

            <TableRow android:baselineAligned="false">

                <Button
                    style="?attr/ed_fn_button_style"
                    android:text="@string/functionButton24DefaultValue" />

                <Button
                    style="?attr/ed_fn_button_style"
                    android:text="@string/functionButton25DefaultValue" />

                <Button
                    style="?attr/ed_fn_button_style"
                    android:text="@string/functionButton26DefaultValue" />

                <Button
                    style="?attr/ed_fn_button_style"
                    android:text="@string/functionButton27DefaultValue" />
            </TableRow>

            <TableRow android:baselineAligned="false">

                <Button
                    style="?attr/ed_fn_button_style"
                    android:text="@string/functionButton28DefaultValue" />

                <Button
                    style="?attr/ed_fn_button_style"
                    android:text="@string/functionButton29DefaultValue" />

                <Button
                    style="?attr/ed_fn_button_style"
                    android:text="@string/functionButton30DefaultValue" />

                <Button
                    style="?attr/ed_fn_button_style"
                    android:text="@string/functionButton31DefaultValue" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/limit_speed_2"
                    style="?attr/ed_normal_button_style"
                    android:layout_width="60dp"
                    android:text="@string/limitSpeedButtonLabel" />

                <Button
                    android:id="@+id/pause_speed_2"
                    style="?attr/ed_normal_button_style"
                    android:layout_width="60dp"
                    android:text="@string/pauseSpeedButtonLabel" />

            </TableRow>
        </TableLayout>
    </ScrollView>

</LinearLayout>