<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item android:id="@+id/flashlight_button"
        app:actionLayout="@layout/toolbar_button_flashlight_off"
        android:title="@string/flashlightAction"
        android:visible="false"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item android:id="@+id/EmerStop"
        app:actionLayout="@layout/toolbar_button_estop"
        android:title="@string/EStop"
        android:visible="false"
        app:showAsAction="always" />

    <item android:id="@+id/powerLayoutButton"
        app:actionLayout="@layout/toolbar_button_power_red"
        android:title="@string/PowerButtonBar"
        android:visible="false"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:icon="?attr/ed_menu_glyph"
        android:id="@+id/overflowMenu"
        android:title=""
        app:showAsAction="always">

        <menu>

            <item android:id="@+id/gamepad_test_mnu1"
                android:title="@string/gamepad1_test" />

            <item android:id="@+id/gamepad_test_mnu2"
                android:title="@string/gamepad2_test" />

            <item android:id="@+id/gamepad_test_mnu3"
                android:title="@string/gamepad3_test" />

        </menu>
    </item>
</menu>
