<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<menu  xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item android:id="@+id/intro_button"
        app:actionLayout="@layout/toolbar_button_wizard"
        android:title="@string/introMenu"
        app:showAsAction="always"
        android:visible="true" />

    <item android:id="@+id/settings_button"
        app:actionLayout="@layout/toolbar_button_preferences"
        android:title="@string/preferences"
        app:showAsAction="always"
        android:visible="true" />

    <item android:id="@+id/flashlight_button"
        app:actionLayout="@layout/toolbar_button_flashlight_off"
        android:title="@string/flashlightAction"
        android:visible="false"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction"  />

    <item
        android:icon="?attr/ed_menu_glyph"
        android:id="@+id/overflowMenu"
        android:title=""
        app:showAsAction="always">

        <menu>

            <item android:id="@+id/intro_mnu"
                android:icon="?attr/ed_wizard_glyph"
                android:title="@string/introMenu" />

            <item android:id="@+id/settings_mnu"
                android:icon="?attr/ed_preferences_glyph"
                android:title="@string/preferences" />

            <item android:id="@+id/logviewer_menu"
                android:icon="?attr/ed_history_glyph"
                android:title="@string/logViewer" />

            <item android:id="@+id/exit_mnu"
                android:icon="?attr/ed_exit_glyph"
                android:title="@string/exit" />

            <item android:id="@+id/about_mnu"
                android:icon="?attr/ed_about_glyph"
                android:title="@string/about" />


        </menu>
    </item>
</menu>