<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item android:id="@+id/flashlight_button"
        app:actionLayout="@layout/toolbar_button_flashlight_off"
        android:title="@string/flashlightAction"
        android:visible="false"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item android:id="@+id/emergency_stop_button"
        app:actionLayout="@layout/toolbar_button_estop"
        android:title="@string/EStop"
        android:visible="false"
        app:showAsAction="always" />

    <item android:id="@+id/powerLayoutButton"
        app:actionLayout="@layout/toolbar_button_power_red"
        android:title="@string/PowerButtonBar"
        android:visible="false"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
</menu>
